# tparse

./: Dockerfile  LICENSE  README.md  app.py  bot.py  pyproject.toml
db/versions/: bcdd19b541b6_session_table.py
infra/: .env.example  docker-compose.yaml
scr/core/: base.py  config.py  repo.py
scr/models/: __init__.py  session.py
scr/repos/: __init__.py  session.py
scr/routers/: __init__.py  endpoints.py
scr/schemas/: __init__.py  login.py  message.py  qr_link.py  status_check.py
scr/services/: __init__.py  bot.py  errors.py  message.py  parser.py  session.py
